[fi-tgl-1115g4] CI: boot : drm_WARN_ON(aux_powered), WARNING: .* at drivers/gpu/drm/i915/display/intel_tc.c:\d+ intel_tc_port_update_mode
http://gfx-ci.fi.intel.com/tree/drm-tip/CI_DRM_11173/fi-tgl-1115g4/boot.html
<4>[ 7.375816] i915 0000:00:02.0: drm_WARN_ON(aux_powered)
<4>[ 7.375837] WARNING: CPU: 1 PID: 7 at drivers/gpu/drm/i915/display/intel_tc.c:631 intel_tc_port_update_mode+0x39d/0x4b0 [i915]
<4>[ 7.375988] Modules linked in: btusb btrtl btbcm btintel bluetooth i915 ecdh_generic ecc mei_hdcp x86_pkg_temp_thermal cdc_ether drm_buddy usbnet mii coretemp ttm drm_dp_helper crct10dif_pclmul crc32_pclmul ghash_clmulni_intel snd_hda_intel snd_intel_dspcfg igc snd_hda_codec snd_hwdep ptp drm_kms_helper snd_hda_core mei_me syscopyarea snd_pcm i2c_i801 sysfillrect sysimgblt i2c_smbus pps_core mei fb_sys_fops intel_lpss_pci prime_numbers
<4>[ 7.376135] CPU: 1 PID: 7 Comm: kworker/u8:0 Not tainted 5.17.0-rc2-CI-CI_DRM_11173+ #1
<4>[ 7.376139] Hardware name: Intel(R) Client Systems NUC11TNHi3/NUC11TNBi3, BIOS TNTGL357.0038.2020.1124.1648 11/24/2020
<4>[ 7.376142] Workqueue: events_unbound async_run_entry_fn
<4>[ 7.376152] RIP: 0010:intel_tc_port_update_mode+0x39d/0x4b0 [i915]
<4>[ 7.376545] Code: 85 d2 75 03 48 8b 17 48 89 14 24 e8 dd f2 38 e1 48 8b 14 24 48 c7 c1 40 84 4f a0 48 c7 c7 d9 83 4f a0 48 89 c6 e8 9a 47 70 e1 <0f> 0b e9 ee fc ff ff 0f 0b 49 c7 c0 1d 84 4f a0 e9 39 fd ff ff 0f
<4>[ 7.376548] RSP: 0018:ffffc900000f7a80 EFLAGS: 00010282
<4>[ 7.376554] RAX: 0000000000000000 RBX: ffff888113d7a000 RCX: 0000000000000001
<4>[ 7.376559] RDX: 0000000080000001 RSI: ffffffff823121fd RDI: 00000000ffffffff
<4>[ 7.376562] RBP: ffff8881112c0000 R08: 0000000000000000 R09: c0000000ffff7fff
<4>[ 7.376565] R10: 0000000000000001 R11: ffffc900000f7898 R12: 0000000000000000
<4>[ 7.376568] R13: 0000000000000000 R14: 00000000d3400001 R15: 0000000000000001
<4>[ 7.376571] FS: 0000000000000000(0000) GS:ffff8884a0080000(0000) knlGS:0000000000000000
<4>[ 7.376574] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 7.376577] CR2: 00007f4c56f88c18 CR3: 0000000128a70002 CR4: 0000000000770ee0
<4>[ 7.376581] PKRU: 55555554
<4>[ 7.376584] Call Trace:
<4>[ 7.376586] <TASK>
<4>[ 7.376598] __intel_tc_port_lock+0x8d/0xe0 [i915]
<4>[ 7.376747] intel_tc_port_connected+0x2d/0x70 [i915]
<4>[ 7.376939] intel_digital_port_connected+0x4c/0x80 [i915]
<4>[ 7.377170] intel_dp_detect+0xc0/0x620 [i915]
<4>[ 7.377465] ? ww_mutex_lock+0x33/0xf0
<4>[ 7.377473] ? drm_modeset_lock+0x48/0x130
<4>[ 7.377483] drm_helper_probe_detect+0x43/0xa0 [drm_kms_helper]
<4>[ 7.377501] drm_helper_probe_single_connector_modes+0x678/0x840 [drm_kms_helper]
<4>[ 7.377540] drm_client_modeset_probe+0x261/0xca0
<4>[ 7.377561] ? __mutex_lock+0x9d/0x920
<4>[ 7.377565] ? __mutex_lock+0xf4/0x920
<4>[ 7.377577] __drm_fb_helper_initial_config_and_unlock+0x42/0x570 [drm_kms_helper]
<4>[ 7.377602] intel_fbdev_initial_config+0xf/0x20 [i915]
<4>[ 7.377865] async_run_entry_fn+0x28/0x130
<4>[ 7.377874] process_one_work+0x272/0x5c0
<4>[ 7.377891] worker_thread+0x37/0x370
<4>[ 7.377900] ? process_one_work+0x5c0/0x5c0
<4>[ 7.377904] kthread+0xed/0x120
<4>[ 7.377908] ? kthread_complete_and_exit+0x20/0x20
<4>[ 7.377916] ret_from_fork+0x1f/0x30
<4>[ 7.377939] </TASK>
<4>[ 7.377942] irq event stamp: 30651
<4>[ 7.377945] hardirqs last enabled at (30657): [<ffffffff811316e2>] __up_console_sem+0x62/0x70
<4>[ 7.377951] hardirqs last disabled at (30662): [<ffffffff811316c7>] __up_console_sem+0x47/0x70
<4>[ 7.377955] softirqs last enabled at (30598): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4>[ 7.377960] softirqs last disabled at (30551): [<ffffffff810b90a6>] irq_exit_rcu+0xa6/0xe0
<4>[ 7.377964] ---[ end trace 0000000000000000 ]---